refactor!: migrate authoritative-username to capability submodule